Fix T51348: Node highlighting is broken

This feature was disabled in the code but not in the interface.

Removing the code, since it needs full re-implementation anyway.